<resources>
    <string name="app_name">MedicalClothes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">3.5</string>
    <string name="nameOfClothe">لباس پزشکی</string>
    <string name="codeOfClothe">m1232</string>
    <string name="Specifications">مشخصات</string>
    <string name="textOfSpecifications">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نياز</string>
    <string name="morePicture">عکس های بیشتر:</string>
    <string name="comments">نظرات:</string>
    <string name="touristPicture">Previous tourist pictures</string>
    <string name="nameOfReviewer">سید محمد حسین امیری</string>
    <string name="fieldOfReviewer">طراح و برنامه نویس</string>
    <string name="comment">ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نياز</string>
    <string name="addToShoppingCart">افزودن به سبد خرید</string>
    <string name="price">2.352.000 ریال</string>
    <string name="watermarkNameOfClothe">Medical clothe m1232</string>
</resources>