<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">


        <ImageView
            android:id="@+id/clothePicture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/score"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clothePicture" />

        <TextView
            android:id="@+id/nameOfClothe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20ssp"
            android:gravity="center"
            android:text="@string/nameOfClothe"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clothePicture" />
        <TextView
            android:id="@+id/watermarkNameOfClothe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_8ssp"
            android:text="@string/watermarkNameOfClothe"
            android:textColor="@color/lightGrey"
            android:textDirection="rtl"
            app:layout_constraintEnd_toEndOf="@+id/nameOfClothe"
            app:layout_constraintStart_toStartOf="@+id/nameOfClothe"
            app:layout_constraintTop_toBottomOf="@id/nameOfClothe" />

        <TextView
            android:id="@+id/codeOfClothe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/codeOfClothe"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/nameOfClothe"
            app:layout_constraintStart_toStartOf="@+id/nameOfClothe"
            app:layout_constraintTop_toBottomOf="@id/nameOfClothe" />

        <TextView
            android:id="@+id/Specifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/Specifications"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/codeOfClothe" />

        <TextView
            android:id="@+id/textOfSpecifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/textOfSpecifications"
            android:textColor="#807575"
            android:textDirection="rtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Specifications" />

        <TextView
            android:id="@+id/morePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/morePicture"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textOfSpecifications" />

        <TextView
            android:id="@+id/touristPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/touristPicture"
            android:textColor="@color/lightGrey"
            android:textDirection="rtl"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/morePicture" />

        <LinearLayout
            android:id="@+id/picLL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/touristPicture">

            <ImageView
                android:id="@+id/picture1"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/picture2"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/picture3"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/picture4"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/picture5"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center"
            android:text="نظرات:"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picLL" />

        <androidx.cardview.widget.CardView
            android:id="@+id/commentCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comments">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nameOfReviewer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nameOfReviewer"
                    android:textColor="@color/black"
                    android:textDirection="rtl"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toStartOf="@id/profile"
                    app:layout_constraintTop_toTopOf="@id/profile" />

                <TextView
                    android:id="@+id/fieldOfReviewer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fieldOfReviewer"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_8ssp"
                    app:layout_constraintEnd_toStartOf="@id/profile"
                    app:layout_constraintStart_toStartOf="@id/nameOfReviewer"
                    app:layout_constraintTop_toBottomOf="@id/nameOfReviewer" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:progressTint="#29B6F6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/comment"
                    android:textColor="#807575"
                    android:textDirection="rtl"
                    android:textSize="@dimen/_8ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentCV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/addToShoppingCart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp"
                    app:cornerRadius="@dimen/_5sdp"
                    app:icon="@drawable/shopping_cart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E1F5FE"
                    android:text="@string/price"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_8ssp"
                    app:cornerRadius="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>